// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AgentsMdExporter > Snapshot tests > all severities (ERROR, WARN, INFO) output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

## Rule: security.no-secrets

**ID:** security.no-secrets
**Severity:** ERROR
**Scope:** **/*

Never commit secrets or API keys to version control.
---

## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** WARN
**Scope:** src/**/*.ts

All features should have tests.
---

## Rule: style.prefer-const

**ID:** style.prefer-const
**Severity:** INFO
**Scope:** **/*.ts

Use const instead of let when variables are not reassigned.
---

**Generated by AlignTrue**
Content Hash: 3bb7fad1e4aefa4ce0f308049806ca563f9a4a3d2d68816c7be08d2f6de2bf97
"
`;

exports[`AgentsMdExporter > Snapshot tests > multiple rules golden output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** ERROR
**Scope:** src/**/*.ts

All features must have tests to ensure reliability.
---

## Rule: docs.update-readme

**ID:** docs.update-readme
**Severity:** WARN
**Scope:** README.md

Keep README updated with significant changes.
---

## Rule: style.use-prettier

**ID:** style.use-prettier
**Severity:** INFO
**Scope:** **/*.{ts,js,json}

Format code with Prettier before committing.
---

**Generated by AlignTrue**
Content Hash: 6747b3fcc6113a00e2827f533be41528f46fb8cbbf7e439d5122bc42cf43b617
"
`;

exports[`AgentsMdExporter > Snapshot tests > multiple scopes merged output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

## Rule: backend.api-tests

**ID:** backend.api-tests
**Severity:** ERROR
**Scope:** backend, backend/api/**/*.ts

All API endpoints must have integration tests.
---

## Rule: frontend.component-tests

**ID:** frontend.component-tests
**Severity:** WARN
**Scope:** apps/web, apps/web/components/**/*.tsx

All React components should have unit tests.
---

**Generated by AlignTrue**
Content Hash: 40610ac35aec3321ecee8900ca753289ec1c3d27d92560e3e23827eacc3d99b7
"
`;

exports[`AgentsMdExporter > Snapshot tests > single rule golden output 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** WARN
**Scope:** **/*.ts

All features must have tests.
---

**Generated by AlignTrue**
Content Hash: 2fbe613e520c841ee47602eb3cef84e746d65eb2afa113730f479a5d7ff44f1a
"
`;

exports[`AgentsMdExporter > Snapshot tests > with vendor fields (fidelity notes included) 1`] = `
"# AGENTS.md

**Version:** v1
**Generated by:** AlignTrue

This file contains rules and guidance for AI coding agents.

## Rule: testing.require-tests

**ID:** testing.require-tests
**Severity:** WARN
**Scope:** **/*.ts

All features must have tests.
---

**Generated by AlignTrue**
Content Hash: ece50c72c20f2ceacdeff4a053658d3408d067bfa7f8a26a6d9cab4015ab4ac1

**Fidelity Notes:**
- Vendor-specific metadata preserved but not active in universal format: copilot, cursor, vscode
"
`;
